--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -13,4 +13,6 @@
       rel="stylesheet" />
     <script src="https://kit.fontawesome.com/4d235eb227.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />   
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
   </head>
