--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -51,7 +51,7 @@
         <h4>Newsletter</h4>
         <form action="https://your-mailchimp-form-action" method="post">
           <div class="form-group">
-            <input type="email" name="EMAIL" placeholder="Tu correo electrónico" required />
+            <input style="width: 200px;" type="email" name="EMAIL" placeholder="Tu correo electrónico" required />
             <button type="submit" class="btn-submit">Suscríbete</button>
           </div>
         </form>
@@ -62,3 +62,7 @@
     </p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
