--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -1,10 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <%- include('../partials/head') %>
 
     <body>
         <%- include('../partials/header') %>
+        <main class="formulario">
             <div class="container profile-wrapper">
                 <div class="row">
                     <div class="col-12">
@@ -14,13 +14,14 @@
                         <form action="/users/update/<%= user.id %>?_method=PUT" method="POST"
                             enctype="multipart/form-data">
                             <div class="row profile-detail">
-                                <div class="col-12 col-md-4 gap-3 p-3 d-flex flex-column align-items-center">
-                                    <img src="/images/users/<%= user.avatar || 'default.png' %>" id="imgAvatar"
+                                <div class="col-12 col-md-4 gap-3 p-3 d-flex flex-column align-items-center justify-content-center">
+                                    <img src="/images/users/<%= user.avatar || 'default.png' %>" id="imgPrev"
                                         class="img-fluid" alt="avatar"
-                                        style="width: 80%; object-fit: cover; object-position: top;">
-                                    <div class="form-group w-75">
+                                        style="width: 100px; object-fit: cover; object-position: top;">
+                                    <div class="form-group position-absolute top-100 end-0">
+                                        <label class="btn btn-dark" for="avatar">Cambiar avatar</label>
                                         <input type="file" class="form-control" id="avatar" name="avatar"
-                                            accept="image/*">
+                                            accept="image/*" hidden onchange="previewImage(this)">
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-8">
@@ -47,18 +48,7 @@
                                             <input type="email" name="email" class="form-input form-control"
                                                 id="imputEmail" value="<%= user.email %>" disabled>
                                         </div>
-                                        <div class="form-group col-12">
-                                            <label for="inputPassword" class="form-label">Nueva Contraseña</label>
-                                            <input type="password" name="password" class="form-input form-control"
-                                                id="inputPassword" minlength="8"
-                                                pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$"
-                                                title="Mínimo 8 caracteres, incluyendo mayúsculas, minúsculas, números y símbolos">
-                                        </div>
-                                        <div class="form-group col-12">
-                                            <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
-                                            <input type="password" name="confirmPassword"
-                                                class="form-input form-control" id="confirmPassword">
-                                        </div>
+
                                     </div>
                                 </div>
                             </div>
@@ -123,6 +113,25 @@
                     </div>
                 </div>
             </div>
+        </main>
+        <script>
+            function previewImage(input) {
+              const imgPrev = document.getElementById('imgPrev');
+              
+              if (input.files && input.files[0]) {
+                const reader = new FileReader();
+                
+                reader.onload = function(e) {
+                  imgPrev.src = e.target.result;
+                }
+                
+                reader.readAsDataURL(input.files[0]);
+              } else {
+                imgPrev.src = '';
+                imgPrev.style.display = 'none';
+              }
+            }
+            </script>
             <%- include('../partials/footer') %>
     </body>
 
