--- a/src/views/animals/animalDetail.ejs
+++ b/src/views/animals/animalDetail.ejs
@@ -31,7 +31,7 @@
                   </ul>
                   <div class="d-flex flex-column justify-content-center flex-md-row align-items-center gap-2" style="margin-top: 60px;">
                     <a class="btn btn-lg btn-secondary" href="/animals/list">Ver más animalitos</a>
-                    <a class="btn btn-lg btn-success" href="/adoptions/preAdopt/<%= animal.id %>">Quero adoptar</a>
+                    <a class="btn btn-lg btn-success" href="/adoptions/preAdopt/<%= animal.id %>">Quiero adoptar</a>
 
                   </div>
                 </div>
