--- a/src/views/adoptions/preadoptThanks.ejs
+++ b/src/views/adoptions/preadoptThanks.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es-AR">
  
-  <%- include('partials/head') %>
+  <%- include('../partials/head') %>
 
 <body class="container">
 
-  <%- include('partials/header') %>
+  <%- include('../partials/header') %>
 
 <!-- Sección Banner  -->
 <div class="banner-container">
